feat: add resource list route
